# manlist

./: Cargo.toml  README.md
data/: command  description
src/: bin.rs  lib.rs  main.rs
